Improve traderPool endpoint, add PersonalFundsLocked InvestorsFundsLocked
