# docs/swagger.yaml
@@ -146,6 +146,10 @@ definitions:
         type: string
       fund:
         type: integer
+      investorsFundsLocked:
+        type: string
+      personalFundsLocked:
+        type: string
       priceChange24H:
         type: number
       profitAndLoss:
